# libshout-CMAKE

./: CMakeLists.txt
include/shout/: .gitignore
